--- a/src/index.css
+++ b/src/index.css
@@ -330,3 +330,13 @@ html {
 .dark .animate-star-appear {
   animation: star-appear 0.5s ease-out forwards;
 }
+@keyframes shoot {
+  0% {
+    transform: translate(0, 0) rotate(var(--angle));
+    opacity: 1;
+  }
+  100% {
+    transform: translate(200px, 200px) rotate(var(--angle));
+    opacity: 0;
+  }
+}
